# ungoogled-chromium-windows

./: README.md  build.py  build_common.py  downloads.ini  flags.windows.gn  package.py  pre_build.py  setup_rust.py  setup_utils.py  setup_win_toolchain.py  win_toolchain.json  win_toolchain_downloads.ini
.github/: dependabot.yml
.github/actions/prepare/: action.yml
.github/actions/stage/: action.yml  index.js  package.json
.github/patches/: pin-depot_tools-commit.patch
.github/scripts/: prepare-mnt-directory.sh  setup-chromium-storage.sh  setup-storage.sh  verify-mnt-permissions.sh
.github/workflows/: build-arm.yml  build-x64.yml  build-x86.yml  main.yml  pre-build.yml  publish-release.yml  reusable-build.yml
patches/: pin-depot-tools-version.patch  series
patches/ungoogled-chromium/windows/: win64-avx2.patch  windows-avx2.patch  windows-compile-mini-installer.patch  windows-disable-rcpy.patch  windows-disable-win-build-output.patch  windows-enable-avx2-optimizations.patch  windows-fix-building-gn.patch  windows-fix-building-with-rust.patch  windows-fix-building-without-safebrowsing.patch  windows-fix-compiler-and-rust-toolchain-compat.patch  windows-fix-files-cfg-case.patch  windows-fix-licenses-gn-path.patch  windows-fix-unsupported-llvm-flags.patch  windows-fix-v8-sandbox-asan.patch  windows-fix-v8-snapshot-toolchain-linux-win-arm64.patch  windows-x64-avx2.patch
