chrome_pgo_phase=2
enable_swiftshader=false
ffmpeg_branding="Chrome"
is_clang=true
is_component_build=false
is_debug=false
is_official_build=true
proprietary_codecs=true
target_cpu="x64"
use_sysroot=false
dcheck_always_on=false
blink_symbol_level=0
v8_symbol_level=0
symbol_level=0
enable_rust=true
enable_mse_mpeg2ts_stream_parser=true
target_os = "win"
use_v8_context_snapshot=true
use_ozone=false
ozone_auto_platforms=false
use_dbus=false
use_glib=false
use_gio=false
use_udev=false
use_gtk=false
use_pangocairo=false